# InclinedPlaneSimulation

./: CMakeLists.txt  README.md
src/: csv_output.c  csv_output.h  gl_trail.c  main.c  main.h  simulate.c  simulate.h
